# reach_and_grasp_ws

./: README.md  main.cpp
.catkin_tools/profiles/default/: config.yaml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/hil_servoing/: EndEffectorPoints.h  Error.h  ErrorInfo.h  TaskIds.h  Teleop.h  TrackPoint.h  TrackedPoints.h
devel/include/wam_control/: BHandFingerPos.h  BHandFingerPosRequest.h  BHandFingerPosResponse.h  BHandFingerVel.h  BHandFingerVelRequest.h  BHandFingerVelResponse.h  BHandGraspPos.h  BHandGraspPosRequest.h  BHandGraspPosResponse.h  BHandGraspVel.h  BHandGraspVelRequest.h  BHandGraspVelResponse.h  BHandPinchPos.h  BHandPinchPosRequest.h  BHandPinchPosResponse.h  BHandSpreadPos.h  BHandSpreadPosRequest.h  BHandSpreadPosResponse.h  BHandSpreadVel.h  BHandSpreadVelRequest.h  BHandSpreadVelResponse.h  CartPosMove.h  CartPosMoveRequest.h  CartPosMoveResponse.h  CartVel.h  CartVelRequest.h  CartVelResponse.h  FollowPath.h  FollowPathRequest.h  FollowPathResponse.h  ForceTorqueTool.h  ForceTorqueToolRequest.h  ForceTorqueToolResponse.h  GetToolPose.h  GetToolPoseRequest.h  GetToolPoseResponse.h  GravityComp.h  GravityCompRequest.h  GravityCompResponse.h  Hold.h  (+34 more)
devel/lib/hil_servoing/: error_calculation  hil_servoing  hil_teleop
devel/lib/pkgconfig/: barrett_model.pc  barrett_wam_moveit_config.pc  hil_servoing.pc  wam_control.pc
devel/lib/python2.7/dist-packages/hil_servoing/msg/: _EndEffectorPoints.py  _Error.py  _ErrorInfo.py  _TaskIds.py  _Teleop.py  _TrackPoint.py  _TrackedPoints.py  __init__.py
devel/lib/python2.7/dist-packages/wam_control/msg/: _MatrixMN.py  _RTCartPos.py  _RTCartVel.py  _RTJointPos.py  _RTJointVel.py  _RTOrtnPos.py  _RTOrtnVel.py  _RTPose.py  __init__.py
devel/lib/python2.7/dist-packages/wam_control/srv/: _BHandFingerPos.py  _BHandFingerVel.py  _BHandGraspPos.py  _BHandGraspVel.py  _BHandPinchPos.py  _BHandSpreadPos.py  _BHandSpreadVel.py  _CartPosMove.py  _CartVel.py  _FollowPath.py  _ForceTorqueTool.py  _GetToolPose.py  _GravityComp.py  _Hold.py  _JointMove.py  _JointMoveBlock.py  _Link.py  _OrtnMove.py  _OrtnSplitMove.py  _Play.py  _PoseMove.py  _Teach.py  __init__.py
devel/lib/wam_control/: control_center
devel/share/barrett_model/cmake/: barrett_modelConfig.cmake
devel/share/barrett_wam_moveit_config/cmake/: barrett_wam_moveit_configConfig.cmake
devel/share/common-lisp/ros/hil_servoing/msg/: EndEffectorPoints.lisp  Error.lisp  ErrorInfo.lisp  TaskIds.lisp  Teleop.lisp  TrackPoint.lisp  TrackedPoints.lisp  _package.lisp  _package_Error.lisp  _package_ErrorInfo.lisp  _package_TaskIds.lisp  (+4 more)
devel/share/hil_servoing/cmake/: hil_servoing-msg-extras.cmake  hil_servoing-msg-paths.cmake  hil_servoingConfig.cmake
devel/share/wam_control/cmake/: wam_control-msg-extras.cmake  wam_control-msg-paths.cmake  wam_controlConfig.cmake
src/gui/: CMakeLists.txt  package.xml
src/hil_servoing/: CMakeLists.txt  package.xml
src/hil_servoing/include/hil_servoing/: error_calculation.h  hil_control.h  hil_utilities.h
src/hil_servoing/launch/: kinematics.launch  one_camera.launch  servoing.launch  state_display_tutorial.launch  two_cameras.launch
src/hil_servoing/src/: error_calculation.cpp  hil_control.cpp  hil_teleop.cpp  kinematics.cpp  state_display_tutorial.cpp
src/mtf_bridge/src/: interface_tracker_node.cpp  vs_tracker_node.cpp
src/visual_servoing_gui/src/visual_servoing_gui/: visual_servoing_gui.py  visual_servoing_gui_plugin.py
src/wam_control/: CMakeLists.txt  package.xml
src/wam_control/include/wam_control/: arm_control.h  bhand_control.h  misc_utilities.h
src/wam_control/msg/: MatrixMN.msg
src/wam_control/src/: arm_control.cpp  bhand_control.cpp  data_control.cpp  main_control.cpp
src/wam_control/srv/: JointMoveBlock.srv
(+58 files in other folders)
